# vacancy_parser_oop

./: .gitignore  README.md  main.py  pyproject.toml  saver.py  vacancy.py  vacancy_api.py
services/: saver.py  utils.py  vacancy.py  vacancy_api.py
