[tool.poetry]
name = "vacancy-parser-oop"
version = "0.1.0"
description = ""
authors = ["Mark Pochivalov <pochivalov.mark@gmail.com>"]
readme = "README.md"
packages = [{include = "vacancy_parser_oop"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
